app/assets/stylesheets/style.scss
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

@import "materialize";

body {
  @extend .grey, .lighten-4;
  font-size: 20px;
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}

.top-bar {
  @extend .light-blue, .text-lighten-1;
}

p {
  padding-bottom: 1em;
}

.page {
  margin-top: 2em;
}

.page-resume-mobile {
  @extend .center-align, .hide-on-med-and-up;
}

.resume-dropdown {
  margin-top: 1em;
}

.resume-button {
  @extend .btn, .grey, .darken-1;
}

#resume {
  margin-top: 3em;
  margin-left: 1em;
}

.page-main {
  @extend .col, .s12, .m9;
}

.page-resume {
  @extend .col, .hide-on-small-only, .s12, .m3;
}

.resume-heading {
  @extend .grey-text, .text-darken-3;
}

.page-card {
  @extend .light-blue, .lighten-4;
}

.page-content > p {
  @extend .flow-text;
}

.project-card {
  @extend .card, .hoverable;
}

.project-content {
  @extend .card-content, .flow-text;
}

.project-title {
  @extend .card-title;
}

.project-action {
  @extend .card-action;
}

#blog-post {
  padding-top: 50px;
}

.post-container {
  @extend .card, .z-depth-2;
  margine-right: 2em;
}

.post-content {
  @extend .container;
  margin-top: 2em;
  margin-bottom: 1em;
}

.post-header {
  margin-bottom: 0.5em;
} 

.posted-at {
  @extend .grey-text, .text-lighten-1;
  font-weight: 500;
}

.post-title {
  @extend .card-title;
  margin-top: -0.7em;
}

.filed-in,
.post-source {
  @extend .grey-text;
  a {
    @extend .blue-text, .text-lighten-2;
    font-weight: 300;
  }
}

.blog-author {
  @extend .grey-text;
}

.post-body {
  padding-top: 1em;
}

.filed-in-description {
}

.filed-in-category {
}

.blog-nav-container {
  @extend .row;
}

.blog-nav {
  @extend .col, .s12, .m6;
}

.prev-article,
.next-article {
  @extend .card-panel, .hoverable;
}

.next-article {
  @extend .right-align;
}

.prev-article {
  @extend .left-align;
}

.prev-article-content,
.next-article-content {
  @extend .card-content;
}

.next-article-link,
.prev-article-link {
  @extend .card-title;
}

.blog-nav-article-title {
  @extend .grey-text;
}

.comments-container {
  @extend .card, .z-depth-2;
}

.comments-header {
}

.comment-content {
  padding-left: 1em;
  padding-right: 1em;
  margin-bottom: -2em;
}

.comment-container {
  @extend .card-action;
}

.comment-content {
  @extend .row, .grey-text, .text-darken-2;
}

.comment-profile-pic {
  @extend .col, .s2, .m1;
}

.comment-info {
  @extend .col, .s10, .m11;
}

.comment-author,
.comment-date,
.comment-body {
  padding-left: 1em;
}

.comment-date {
  @extend .grey-text;
}

.leave-comment {
  @extend .grey-text;
  padding-bottom: 1em;
}

.comment-form-container {
  @extend .card-action;
}

.comment-form {
  @extend .row;
  padding-top: 2em;
}

.comment-field, .comment-actions {
  @extend .col, .s12, .input-field;
}

.rss-card {
  @extend .hoverable;
}

.blog-side-section {
  @extend .col, .s12;
}

.blog-side-card {
  @extend .card-panel;
}

.blog-side-card-content {
  @extend .card-content;
}

.blog-side-card-title {
  @extend .card-title, .grey-text, .text-darken-1;
}

.blog-inline-link {
  display: inline-block;
  margin-right: 0.5em;
}

#social-icons {
  display: inline;
}

.social-padding {
  display: inline;
  padding: 3px;
}

.social-btn {
  @extend .white;
}

.social-icon {
  @extend .orange-text;
}

.bottom-bar {
  @extend .orange, .center-align;
}

